--- a/about.html
+++ b/about.html
@@ -63,8 +63,8 @@
                 width: 100%;
             }
 
-            nav ul li {
-                margin: 10px 0;
+            nav ul.active {
+                display: flex;
             }
 
             .mobile-menu-btn {
@@ -73,7 +73,7 @@
         }
 
         .about {
-            padding: 50px 0;
+            padding: 50px 20px;
             background-color: #f4f4f4;
             text-align: center;
         }
@@ -85,80 +85,43 @@
             line-height: 1.6;
             text-align: justify; /* Justify text */
         }
-        * Media Queries */
+
         @media (max-width: 768px) {
+            .about {
+                padding: 30px 20px;
+            }
+
+            .about p {
+                max-width: 100%;
+                margin: 0 10px;
+            }
+
             nav ul {
-                display: none;
-                flex-direction: column;
                 position: absolute;
                 top: 60px;
                 left: 20px;
-                width: 100%;
+                width: calc(100% - 40px);
                 background-color: #000;
                 padding: 10px 0;
                 z-index: 1000;
             }
-            .about {
-            padding: 50px 0;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-            .about p {
-            max-width: 300px;
-            margin: 10px;
-            font-size: 18px;
-            line-height: 1.6;
-            text-align: justify; /* Justify text */
-        }
-            .slider {
-            position: relative;
-            max-width: 100%;
-            margin: 20px auto;
-            }
-            nav ul.active {
-                display: flex;
-            }
+
             .mobile-menu-btn {
-                display: block;
                 position: absolute;
                 top: 15px;
                 right: 20px;
-                cursor: pointer;
                 z-index: 1500;
-                color: #fff;
-                font-size: 1.5em;
-            }
-            .mobile-menu-btn.active {
-                color: #4CAF50;
-            }
-            nav ul li {
-                text-align: center;
-                margin: 10px 0;
-            }
-            .menu-item {
-                flex: 1 1 calc(45% - 20px);
             }
         }
-        
 
         @media (max-width: 550px) {
-            .menu-item {
-                flex: 1 1 calc(100% - 20px);
-            }
             .about {
-            padding: 50px 0;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
+                padding: 20px 15px;
+            }
+
             .about p {
-            max-width: 600px;
-            margin: 0 auto;
-            font-size: 18px;
-            line-height: 1.6;
-            text-align: justify; /* Justify text */
-        }
-            .welcome {
-                font-size: 1.5em;
+                margin: 0 10px;
+                font-size: 16px;
             }
         }
     </style>
@@ -187,7 +150,7 @@
     <script>
         function toggleMobileMenu() {
             const nav = document.querySelector('nav ul');
-            nav.style.display = nav.style.display === 'flex' ? 'none' : 'flex';
+            nav.classList.toggle('active');
         }
     </script>
 </body>
