--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
     </header>
 
     <section class="about">
-        <p>I am running a franchisee of Banjo's The Food Chain and Creamy Nuts, basically operated from Nashik and Pune respectively. I have taken those franchisees under the name of the firm Ritesh Patil & Sons. I started the first quick service restaurant located between the towns of Savda and Faizpur to attract youngsters. I created a calm, beautiful, attractive, dark theme interior with a huge floor area and a mezzanine floor.</p>
+        <p> We operate franchises of Banjo's The Food Chain and Creamy Nuts, based in Nashik and Pune respectively, under the firm Ritesh Patil & Sons. Our first quick-service restaurant is strategically located between the towns of Savda and Faizpur to attract young customers. We provide a serene, beautifully designed interior with a dark theme, spacious floor area, and a mezzanine floor, creating an inviting and stylish atmosphere.</p>
     </section>
 
     <script>
