--- a/contact.html
+++ b/contact.html
@@ -5,171 +5,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banjo's The Food Chain</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+       body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
-        header {
-            background-color: #000; /* Black background */
-            color: #fff;
-            padding: 10px 0;
-        }
+header {
+    background-color: #000;
+    color: #fff;
+    padding: 10px 0;
+}
 
-        .container {
-            width: 90%;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
+.container {
+    width: 90%;
+    margin: 0 auto;
+}
 
-        .logo img {
-            width: 150px;
-        }
+.logo img {
+    width: 150px;
+}
 
-        nav ul {
-            list-style: none;
-            display: flex;
-            margin: 0;
-            padding: 0;
-        }
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
-        nav ul li {
-            margin: 0 15px;
-        }
+nav ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
 
-        nav ul li a {
-            color: #fff; /* White text */
-            text-decoration: none;
-        }
+nav ul li {
+    margin: 0 15px;
+}
 
-        nav ul li a:hover {
-            text-decoration: underline;
-        }
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
 
-        .mobile-menu-btn {
-            display: none;
-            font-size: 24px;
-            cursor: pointer;
-            color: #fff;
-        }
+nav ul li a:hover {
+    text-decoration: underline;
+}
 
-        @media (max-width: 768px) {
-            nav ul {
-                display: none;
-                flex-direction: column;
-                width: 100%;
-            }
+.mobile-menu-btn {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+}
 
-            nav ul li {
-                margin: 10px 0;
-            }
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
-            .mobile-menu-btn {
-                display: block;
-            }
-        }
+    .mobile-menu-btn {
+        display: block;
+    }
 
-        .menu-category {
-            cursor: pointer;
-            padding: 10px;
-            background-color: #333;
-            color: #fff;
-            margin-top: 10px;
-        }
+    nav ul {
+        display: none;
+        width: 100%;
+        flex-direction: column;
+        text-align: center;
+        background-color: #000;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        right: 0;
+    }
 
-        .menu-items {
-            display: none;
-            margin: 10px 0;
-        }
+    nav ul.show {
+        display: flex;
+    }
 
-        .menu-item {
-            background-color: #f4f4f4;
-            padding: 10px;
-            margin: 5px 0;
-            display: flex;
-            align-items: center;
-        }
+    nav ul li {
+        margin: 10px 0;
+    }
 
-        .menu-item img {
-            max-width: 60px; /* Reduce image size */
-            max-height: 60px; /* Reduce image size */
-            margin-right: 10px;
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
+    .contact {
+        padding: 20px 0;
+    }
 
-        .menu-item h3 {
-            margin: 0;
-            font-size: 18px;
-        }
+    .contact-form {
+        max-width: 100%;
+        padding: 0 20px;
+    }
+}
 
-        .menu-item p {
-            margin: 0;
-            margin-left: auto;
-            font-size: 16px;
-            color: #666;
-        }
-
-        .menu-item button {
-            margin-left: 20px;
-            padding: 5px 10px;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            cursor: pointer;
-        }
-
-        .menu-item button:hover {
-            background-color: #555;
-        }
-
-        .contact {
-            padding: 50px 0;
-            background-color: #f4f4f4;
-            text-align: center;
-        }
-
-        .contact h2 {
-            margin-bottom: 20px;
-        }
-
-        .contact-form {
-            max-width: 600px;
-            margin: 0 auto;
-            text-align: left;
-        }
-
-        .contact-form label {
-            display: block;
-            margin-bottom: 5px;
-            font-weight: bold;
-        }
-
-        .contact-form input,
-        .contact-form textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .contact-form button {
-            padding: 10px 20px;
-            background-color: #333;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .contact-form button:hover {
-            background-color: #555;
-        }
     </style>
 </head>
 <body>
