--- a/about.html
+++ b/about.html
@@ -72,18 +72,32 @@
             }
         }
 
-        .about {
+        .section {
             padding: 50px 20px;
-            background-color: #f4f4f4;
             text-align: center;
         }
 
-        .about p {
+        .section-intro {
+            background-color: #f4f4f4;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            margin-bottom: 20px;
+        }
+
+        .section h2 {
+            font-size: 24px;
+            color: #333;
+            margin-bottom: 15px;
+            text-align: center;
+        }
+
+        .section p {
             max-width: 600px;
             margin: 0 auto;
             font-size: 18px;
             line-height: 1.6;
-            text-align: justify; /* Justify text */
+            text-align: justify;
         }
 
         .vision,
@@ -92,7 +106,7 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             padding: 30px;
-            margin: 20px 0;
+            margin-bottom: 20px;
         }
 
         .vision h2,
@@ -111,11 +125,11 @@
         }
 
         @media (max-width: 768px) {
-            .about {
+            .section {
                 padding: 30px 20px;
             }
 
-            .about p {
+            .section p {
                 max-width: 100%;
                 margin: 0 10px;
             }
@@ -127,11 +141,11 @@
         }
 
         @media (max-width: 550px) {
-            .about {
+            .section {
                 padding: 20px 15px;
             }
 
-            .about p {
+            .section p {
                 margin: 0 10px;
                 font-size: 16px;
             }
@@ -170,18 +184,19 @@
         </div>
     </header>
 
-    <section class="about">
-        <p>We operate franchises of Banjo's The Food Chain and Creamy Nuts, based in Nashik and Pune respectively, under the firm Ritesh Patil & Sons. Our first quick-service restaurant is strategically located between the towns of Savda and Faizpur to attract young customers. We provide a serene, beautifully designed interior with a dark theme, spacious floor area, and a mezzanine floor, creating an inviting and stylish atmosphere.</p>
+    <section class="section section-intro">
+        <h2>About</h2>
+        <p>We operate franchises of Banjo's The Food Chain and Creamy Nuts, based in Nashik and Pune respectively. Our first quick-service restaurant is strategically located between the towns of Savda and Faizpur to attract young customers. We provide a serene, beautifully designed interior with a dark theme, spacious floor area, and a mezzanine floor, creating an inviting and stylish atmosphere.</p>
+    </section>
 
-        <div class="vision">
-            <h2>Our Vision</h2>
-            <p>Our vision is to expand our presence across more towns and cities, bringing quality food and a unique dining experience to every community we serve.</p>
-        </div>
+    <section class="section vision">
+        <h2>Our Vision</h2>
+        <p>Our vision is to expand our presence across more towns and cities, bringing quality food and a unique dining experience to every community we serve.</p>
+    </section>
 
-        <div class="mission">
-            <h2>Our Mission</h2>
-            <p>Our mission is to consistently deliver exceptional service, innovate our menu offerings, and maintain a vibrant and welcoming environment for our customers.</p>
-        </div>
+    <section class="section mission">
+        <h2>Our Mission</h2>
+        <p>Our mission is to consistently deliver exceptional service, innovate our menu offerings, and maintain a vibrant and welcoming environment for our customers.</p>
     </section>
 
     <script>
